@@ -15,6 +15,7 @@ Process Hacker
      to hung windows
    * Environment variables and current directory are 
      now correctly shown for WOW64 processes
+   * I/O priority names are now used instead of numbers
  * FIXED:
    * Network list bug
    * Memory leaks
